--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				var curPageSet = pages.slice(startIndex, startIndex + pageSetSize);
 				for (pageIndex in pages)
 				{
-					var page = ("pages\\" + pages[pageIndex]);
+					var page = ("pages/" + pages[pageIndex]);
 					LoadPageAjax(page, "pagesDiv");
 				}
 			}
