Test of blog post.

--- a/pages/8-24-2014.html
+++ b/pages/8-24-2014.html
@@ -1,3 +1,9 @@
-<p>
-	This is a test.
-</p>
+<div class="blogPost">
+	<H1 class="header">
+		First blog post
+	</H1>
+	<br/>
+	<p>
+		This is my first blog post.
+	</p>
+</div>
