--- a/pages/8-24-2014.html
+++ b/pages/8-24-2014.html
@@ -1,9 +1,22 @@
 <div class="blogPost">
+	<p class="category">
+		Blog Post
+	</p>
+	<br/>
+	<p class="tag">
+	</p>
+	<br/>
 	<H1 class="header">
-		First blog post
+		Expectations for the semester!
 	</H1>
 	<br/>
 	<p>
-		This is my first blog post.
+		For this semester I hope to expand my social circle because I have a natural tendancy towards shyness. 
+		I also hope to gain greater knowledge of computer systems, mathematics, and computer languages; this blog is a effort to advance that goal because I wrote the code for it and it is being hosted on GitHub.
+		I also expect to get in better shape for this semester.  I wish to enhance my physical endurance through cycling and racquetball.  I also hope that racquetball will help improve my overall physical shape.
+	</p>
+	<br/>
+	<p class="footnote">
+		If this page appears really barebone just know that CSS and search functionality is comming.
 	</p>
 </div>
