Edit of post layout.

--- a/pages/8-24-2014.html
+++ b/pages/8-24-2014.html
@@ -1,14 +1,14 @@
 <div class="blogPost">
+	<H1 class="title">
+		Expectations for the semester!
+	</H1>
+	<br/>
 	<p class="category">
 		Blog Post
 	</p>
 	<br/>
 	<p class="tag">
 	</p>
-	<br/>
-	<H1 class="header">
-		Expectations for the semester!
-	</H1>
 	<br/>
 	<p>
 		For this semester I hope to expand my social circle because I have a natural tendancy towards shyness. 
