--- a/pages/8-24-2014.html
+++ b/pages/8-24-2014.html
@@ -3,6 +3,10 @@
 		Expectations for the semester!
 	</H1>
 	<br/>
+	<p class="date">
+		8-24-2014
+	</p>
+	<br/>
 	<p class="category">
 		Blog Post
 	</p>
