--- a/pages/8-24-2014.html
+++ b/pages/8-24-2014.html
@@ -7,9 +7,17 @@
 		8-24-2014
 	</p>
 	<br/>
+	<h6>
+		Category
+	</h6>
+	<br/>
 	<p class="category">
 		Blog Post
 	</p>
+	<br/>
+	<h6>
+		Tags
+	</h6>
 	<br/>
 	<p class="tag">
 	</p>
@@ -21,6 +29,6 @@
 	</p>
 	<br/>
 	<p class="footnote">
-		If this page appears really barebone just know that CSS and search functionality is comming.
+		If this page appears really barebone just know that CSS and search functionality is coming.
 	</p>
 </div>
