--- a/pages/8-24-2014.html
+++ b/pages/8-24-2014.html
@@ -2,18 +2,21 @@
 	<H1 class="title">
 		Expectations for the semester!
 	</H1>
+	<h3>
+		Date
+	</h3>
 	<p class="date">
 		8-24-2014
 	</p>
-	<h6>
+	<h3>
 		Category
-	</h6>
+	</h3>
 	<p class="category">
 		Blog Post
 	</p>
-	<h6>
+	<h3>
 		Tags
-	</h6>
+	</h3>
 	<p class="tag">
 	</p>
 	<p>
