--- a/pages/8-24-2014.html
+++ b/pages/8-24-2014.html
@@ -24,6 +24,9 @@
 		I also hope to gain greater knowledge of computer systems, mathematics, and computer languages; this blog is a effort to advance that goal because I wrote the code for it and it is being hosted on GitHub.
 		I also expect to get in better shape for this semester.  I wish to enhance my physical endurance through cycling and racquetball.  I also hope that racquetball will help improve my overall physical shape.
 	</p>
+	<h3>
+		Footnote
+	</h3>
 	<p class="footnote">
 		If this page appears really barebone just know that CSS and search functionality is coming.
 	</p>
