--- a/pages/8-24-2014.html
+++ b/pages/8-24-2014.html
@@ -19,6 +19,9 @@
 	</h3>
 	<p class="tag">
 	</p>
+	<h3>
+		Main Post
+	</h3>
 	<p>
 		For this semester I hope to expand my social circle because I have a natural tendancy towards shyness. 
 		I also hope to gain greater knowledge of computer systems, mathematics, and computer languages; this blog is a effort to advance that goal because I wrote the code for it and it is being hosted on GitHub.
