--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
+		<div id="personalInfo">
+			<h1>
+				Dylan's First Year Experience!
+			</h1>
+			<p>
+				This is my blog for FYE!
+				<br/>
+				This blog will be the recording of my experiences for my first semester at UALR.
+			</p>
+		</div>
 		<div id="pagesDiv">
 		</div>
 	</body>
