--- a/pages/8-24-2014.html
+++ b/pages/8-24-2014.html
@@ -1,36 +1,46 @@
 <div class="blogPost">
-	<H1 class="title">
+	<h2 class="title">
 		Expectations for the semester!
-	</H1>
-	<h3>
-		Date
-	</h3>
-	<p class="date">
-		8-24-2014
-	</p>
-	<h3>
-		Category
-	</h3>
-	<p class="category">
-		Blog Post
-	</p>
-	<h3>
-		Tags
-	</h3>
-	<p class="tag">
-	</p>
-	<h3>
-		Main Post
-	</h3>
-	<p>
-		For this semester I hope to expand my social circle because I have a natural tendancy towards shyness. 
-		I also hope to gain greater knowledge of computer systems, mathematics, and computer languages; this blog is a effort to advance that goal because I wrote the code for it and it is being hosted on GitHub.
-		I also expect to get in better shape for this semester.  I wish to enhance my physical endurance through cycling and racquetball.  I also hope that racquetball will help improve my overall physical shape.
-	</p>
-	<h3>
-		Footnote
-	</h3>
-	<p class="footnote">
-		If this page appears really barebone just know that CSS and search functionality is coming.
-	</p>
+	</h2>
+	<div class="date">
+		<h3>
+			Date
+		</h3>
+		<p>
+			8-24-2014
+		</p>
+	</div>
+	<div class="category">
+		<h3>
+			Category
+		</h3>
+		<p>
+			Blog Post
+		</p>
+	</div>
+	<div class="tag">
+		<h3>
+			Tags
+		</h3>
+		<p>
+		</p>
+	</div>
+	<div class="mainPost">
+		<h3>
+			Main Post
+		</h3>
+		<p>
+			For this semester I hope to expand my social circle because I have a natural tendancy towards shyness. 
+			I also hope to gain greater knowledge of computer systems, mathematics, and computer languages; this blog is a effort to advance that goal because I wrote the code for it and it is being hosted on GitHub.
+			I also expect to get in better shape for this semester.  I wish to enhance my physical endurance through cycling and racquetball.  I also hope that racquetball will help improve my overall physical shape.
+		</p>
+	</div>
+	<div class="footNote">
+		<h3>
+			Footnote
+		</h3>
+		<p>
+			If this page appears really barebone just know that CSS and search functionality is coming.
+		</p>
+	</div>
 </div>
