--- a/pages/8-24-2014.html
+++ b/pages/8-24-2014.html
@@ -1,7 +1,9 @@
 <div class="blogPost">
-	<h2 class="title">
-		Expectations for the semester!
-	</h2>
+	<div class="title">
+		<h2 class="title">
+			Expectations for the semester!
+		</h2>
+	</div>
 	<div class="date">
 		<h3>
 			Date
