--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<script type="text/javascript">
 			function LoadPages()
 			{
-				var pages = ["8-24-2014.html"];
+				var pages = ["9-8-2014.html", "8-24-2014.html"];
 				for (pageIndex in pages)
 				{
 					var page = ("pages/" + pages[pageIndex]);
