Beginning of critique.

--- a/pages/9-8-2014.html
+++ b/pages/9-8-2014.html
@@ -1,7 +1,7 @@
 <div class="blogPost">
 	<div class="title">
 		<h2>
-			Expectations for the semester!
+			The World is Flat 3.0 by Thomas Friedman
 		</h2>
 	</div>
 	<div class="date">
@@ -9,7 +9,7 @@
 			Date
 		</h3>
 		<p>
-			8-24-2014
+			9-8-2014
 		</p>
 	</div>
 	<div class="category">
@@ -17,7 +17,7 @@
 			Category
 		</h3>
 		<p>
-			Blog Post
+			Critiques
 		</p>
 	</div>
 	<div class="tag">
@@ -25,16 +25,19 @@
 			Tags
 		</h3>
 		<p>
+			#FlatWorld #Yolo
 		</p>
 	</div>
 	<div class="mainPost">
 		<h3>
-			Main Post
+			A brief analysis of the World is Flat 3.0
 		</h3>
+		<h6>
+			Presentation Style
+		</h6>
 		<p>
-			For this semester I hope to expand my social circle because I have a natural tendancy towards shyness.
-			I also hope to gain greater knowledge of computer systems, mathematics, and computer languages; this blog is a effort to advance that goal because I wrote the code for it and it is being hosted on GitHub.
-			I also expect to get in better shape for this semester.  I wish to enhance my physical endurance through cycling and racquetball.  I also hope that racquetball will help improve my overall physical shape.
+			Friedman was an interesting and engaging presenter however, he did have some issues.
+			He repeated himself frequently and often took his time getting to the point he was trying to make.
 		</p>
 	</div>
 	<div class="footNote">
@@ -42,7 +45,6 @@
 			Footnote
 		</h3>
 		<p>
-			If this page appears really barebone just know that CSS and search functionality is coming.
 		</p>
 	</div>
 </div>
