--- a/pages/9-8-2014.html
+++ b/pages/9-8-2014.html
@@ -32,12 +32,22 @@
 		<h3>
 			A brief analysis of the World is Flat 3.0
 		</h3>
-		<h6>
+		<h5>
 			Presentation Style
-		</h6>
+		</h5>
 		<p>
 			Friedman was an interesting and engaging presenter however, he did have some issues.
 			He repeated himself frequently and often took his time getting to the point he was trying to make.
+			He also had some really bad metaphors but I guess that depends on who you talk to.
+		</p>
+		<h5>
+			Content
+		</h5>
+		<p>
+			His presentation was very detailed and he provided lots of information to support his main thesis.
+			However, he did not provide enough detail about how this globalization occurred during his "The World is Flat 1.0."
+			In these stages, it is likely that globalization occurred both with and without he home country even though home country sponsorship was very important.
+			He did not mention the role of Joint-Stock companies during the colonization of the Americas or the role of individual merchants in establishing overland trade routes or Mediterannian trade routs.
 		</p>
 	</div>
 	<div class="footNote">
@@ -45,6 +55,7 @@
 			Footnote
 		</h3>
 		<p>
+			The site still needs some styling.
 		</p>
 	</div>
 </div>
