--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 			<script type="text/javascript">
 			function LoadPages()
 			{
-				var pages = [["9-8-2014.html","0"] ["8-24-2014.html","0"]];
+				var pages = [["9-8-2014.html","0"], ["8-24-2014.html","0"]];
 				for (pageIndex in pages)
 				{
-					var page = ("pages/" + pages[pageIndex][0]);
+					var page = ("pages/" + pages[pageIndex]);
 					LoadPageAjax(page, "pagesDiv");
 				}
 			}
