--- a/index.html
+++ b/index.html
@@ -19,23 +19,25 @@
 			<script type="text/javascript">
 			function LoadPages()
 			{
-				var pages = [["9-8-2014.html","./pictures/theworldisflat.jpg"], ["8-24-2014.html","./pictures/mountains.jpg"]];
-				for (pageIndex in pages)
+				var pageFiles = [["9-8-2014.html","./pictures/theworldisflat.jpg"], ["8-24-2014.html","./pictures/mountains.jpg"]];
+				var pageClasses = document.getElementByClassName("blogPost");
+				for (pageIndex in pageFiles)
 				{
-					var page = ("pages/" + pages[pageIndex][0]);
-					var image = pages[pageIndex][1];
-					LoadPageAjax(page, image, "pagesDiv");
+					var pageFile = ("pages/" + pageFiles[pageIndex][0]);
+					var image = pageFiles[pageIndex][1];
+					var pageClass = pageClasses[pageIndex];
+					LoadPageAjax(pageFile, image, pageClass);
 				}
 			}
-			function LoadPageAjax(pageName, imageUrl, divId)
+			function LoadPageAjax(pageName, imageUrl, div)
 			{
 				var xmlHttp = new XMLHttpRequest();
 				xmlHttp.onreadystatechange = function()
 				{
 					if (xmlHttp.readyState == 4 && xmlHttp.status == 200)
 					{
-						document.getElementById(divId).innerHTML += xmlHttp.responseText;
-						document.getElementById(divId).style.background = "url(" + imageUrl + ") no-repeat";
+						div.innerHTML += xmlHttp.responseText;
+						div.style.background = "url(" + imageUrl + ") no-repeat";
 					}
 					else if (xmlHttp.status == 404)
 					{
