--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			function LoadPages()
 			{
 				var pageFiles = [["9-8-2014.html","./pictures/theworldisflat.jpg"], ["8-24-2014.html","./pictures/mountains.jpg"]];
-				var pageClasses = document.getElementByClassName("blogPost");
+				var pageClasses = document.getElementsByClassName("blogPost");
 				for (pageIndex in pageFiles)
 				{
 					var pageFile = ("pages/" + pageFiles[pageIndex][0]);
