--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				{
 					var page = ("pages/" + pages[pageIndex][0]);
 					var image = pages[pageIndex][1];
-					LoadPageAjax(page, image, "blogPost");
+					LoadPageAjax(page, image, "pagesDiv");
 				}
 			}
 			function LoadPageAjax(pageName, imageUrl, divId)
