--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				for (pageIndex in pageClasses)
 				{
 					var page = pageClasses[pageIndex];
-					page.style.background = "url(" + pages[pageIndex][1] + ") no-repeat";
+					page.style.background = "url(" + imageUrl + ") no-repeat";
 				}
 			}
 			function LoadPageAjax(pageName, imageUrl, divId)
