--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						document.getElementById(divId).innerHTML += "Error.";
 					}
 				}
-				xmlHttp.open("GET", pageName, true);
+				xmlHttp.open("GET", pageName, false);
 				xmlHttp.send();
 			}
 			LoadPages();
