--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				{
 					var page = pageClasses[pageIndex];
 					var image = pages[pageIndex][1];
-					page.style.background = "url(" + image + ") no-repeat cover;";
+					page.style.background = "url(" + image + ") no-repeat";
 				}
 			}
 			function LoadPageAjax(pageName, divId)
