--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 					var page = pageClasses[pageIndex];
 					var image = pages[pageIndex][1];
 					page.style.background = "url(" + image + ") no-repeat";
+					page.style.backgroundSize = "cover";
 				}
 			}
 			function LoadPageAjax(pageName, divId)
