--- a/pages/9-8-2014.html
+++ b/pages/9-8-2014.html
@@ -73,6 +73,7 @@
 			I think that he did well in mentioning how the "Green Revolution" is really just a load of crap and no real progress is being made.
 			He stressed the point of needing to start are true Green Revolution because if we don't then the energy and climate crisis will destroy us.
 			He defined a revolution as a fundamental change where people get hurt.  I can't think of any revolution where people didn't get hurt.
+			He also mentioned how the US is falling behind China and Qatar in Green Technology and how it will be harder to catch up if we don't get our act together.  
 		</p>
 	</div>
 	<div class="footNote">
