--- a/pages/9-22-2014.html
+++ b/pages/9-22-2014.html
@@ -35,6 +35,7 @@
 		<p>
 			I felt like the scavenger hunt was an interesting way to get us, the students, to start working together as a team.
 			Our group split up and divided the tasks immeadiatly; I did the tasks that required traveling, because I had a bike, and the others went to the library to get on the computer.
+			I think that if I were to do it again, I would not do it differently.  Our team immeadiatly started working together and got the job done quickly and efficiently.
 		</p>
 	</div>
 	<div class="footNote">
@@ -42,6 +43,7 @@
 			Footnote
 		</h3>
 		<p>
+			Code editors don't have spell check so there may be typos.
 		</p>
 	</div>
 </div>
