--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<script type="text/javascript">
 			function LoadPages()
 			{
-				var pages = [["9-22-2014-html", ""], ["9-8-2014.html","./pictures/theworldisflat.jpg"], ["8-24-2014.html","./pictures/mountains.jpg"]];
+				var pages = [["9-22-2014-html", "galaxy.jpg"], ["9-8-2014.html","./pictures/theworldisflat.jpg"], ["8-24-2014.html","./pictures/mountains.jpg"]];
 				for (pageIndex in pages)
 				{
 					var page = ("pages/" + pages[pageIndex][0]);
