--- a/pages/10-13-2014.html
+++ b/pages/10-13-2014.html
@@ -29,10 +29,19 @@
 	</div>
 	<div class="mainPost">
 		<h3>
-			Main Post
+			Thoughts on the presentations and the Google Power Searching videos
 		</h3>
+		<h5>
+			The Presentation
+		</h5>
 		<p>
-
+			I felt like I had an effective presentation overall.  There were some areas where some extra preperation would have helped however.  For example, some of the audience may have noticed a slight wavering in my voice at the beginning of my presentation; this is because I did not rehearse for my presentation at all.  This is also why I refered back to the computer more that I would have liked.  The obvious solution is for me to practice for my presentations more, but there is a deeper problem where if I don't think that the audience and the instructor are going to be very critical of my presentation I don't practice very much.  I think that the strengths of my presentation are the quality of my dictation after I got going as well as the asthetics of the power point itself.  I also feel that the best aspect of my presentation was that it was essentially a critique on the topic of "The Condor's" presentation; this made it both funny and informative.
+		</p>
+		<h5>
+			Google Power Searching
+		</h5>
+		<p>
+			
 		</p>
 	</div>
 	<div class="footNote">
