--- a/pages/10-13-2014.html
+++ b/pages/10-13-2014.html
@@ -17,7 +17,7 @@
 			Category
 		</h3>
 		<p>
-			Blog Post
+			Reflection
 		</p>
 	</div>
 	<div class="tag">
@@ -40,6 +40,36 @@
 		<h5>
 			Google Power Searching
 		</h5>
+		<h6>
+			Image Color filter
+		</h6>
+		<p>
+			Google image search as a color filter functianlity.  This allows you to search images and then filter them by color.  This allows you to filter images by context as well.  For example if you google tesla and apply the red filter, you will get the car but if you apply the black and white filter, you will get pictures of Nikola Tesla.
+		</p>
+		<h6>
+			Limit Search Results by Type
+		</h6>
+		<p>
+			You can filter you search results by content.  You can limit your search results to google maps, or videos, or blogs.  If you wanted to find the fastest way to get somewhere, it would be beneficial to limit the search results to different types of maps.
+		</p>
+		<h6>
+			Restrict by Filetype
+		</h6>
+		<p>
+			You can limit you search results to just files; you can also refine you searches further by specifying exactly which filetype to use.  For example if you want to get just google maps files, you can restrict your search results to the filetype that google maps uses.
+		</p>
+		<h6>
+			Intext operator
+		</h6>
+		<p>
+			You can use the intext operator to require that a specific string be in each search result.  You could use this to make finding quotes easier.
+		</p>
+		<h6>
+			Search By Image
+		</h6>
+		<p>
+			If you have an image that you got off the internet, but you don't know where it was taken or who took it.  You can use the google search by image functinality to find where a picture was taken and who took it.
+		</p>
 		<p>
 			
 		</p>
