Refactor the javascript to support multiple sites.

--- a/index.html
+++ b/index.html
@@ -2,28 +2,24 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
-	<body>
-		<div id="personalInfo">
-			<h1>
-				Dylan's First Year Experience!
-			</h1>
-			<p>
-				This is my blog for FYE!
-				<br/>
-				This blog will be the recording of my experiences for my first semester at UALR.
-			</p>
-		</div>
-		<div id="pagesDiv">
-		</div>
+	<body id = "body">
+		<button onclick = "LoadBlog();">
+			Blog
+		</button>
 	</body>
-			<script type="text/javascript">
+		<script type="text/javascript">
+			function LoadBlog()
+			{
+				document.getElementById("body").innerHTML = LoadPageAjax("mainpages/blog.html");
+			}
 			function LoadPages()
 			{
 				var pages = [["11-3-2014.html", "./pictures/foggy.jpg"], ["10-13-2014.html","./pictures/forest.jpg"], ["9-22-2014.html", "./pictures/galaxy.jpg"], ["9-8-2014.html","./pictures/theworldisflat.jpg"], ["8-24-2014.html","./pictures/mountains.jpg"]];
 				for (pageIndex in pages)
 				{
-					var page = ("pages/" + pages[pageIndex][0]);
-					LoadPageAjax(page, "pagesDiv");
+					var page = ("blog/" + pages[pageIndex][0]);
+					var result = LoadPageAjax(page, "pagesDiv");
+					document.getElementById("pagesDiv").innerHTML += LoadPageAjax(page);
 				}
 				var pageClasses = document.getElementsByClassName("blogPost");
 				for (pageIndex in pageClasses)
@@ -34,23 +30,25 @@
 					page.style.backgroundSize = "cover";
 				}
 			}
-			function LoadPageAjax(pageName, divId)
+			function LoadPageAjax(pageName)
 			{
 				var xmlHttp = new XMLHttpRequest();
 				xmlHttp.onreadystatechange = function()
 				{
 					if (xmlHttp.readyState == 4 && xmlHttp.status == 200)
 					{
-						document.getElementById(divId).innerHTML += xmlHttp.responseText;
+						return xmlHttp.responseText;
+						// document.getElementById(divId).innerHTML += xmlHttp.responseText;
 					}
 					else if (xmlHttp.status == 404)
 					{
-						document.getElementById(divId).innerHTML += "Error.";
+						return "Error.";
+						// document.getElementById(divId).innerHTML += "Error.";
 					}
 				}
 				xmlHttp.open("GET", pageName, false);
 				xmlHttp.send();
 			}
-			LoadPages();
+			// LoadPages();
 		</script>
 </html>
