--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		</script>
 	</head>
 	<body id = "body">
-		<button onclick = "LoadBlog();">
+		<button onclick = "LoadBlog()">
 			Blog
 		</button>
 	</body>
