--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		function LoadBlog()
 		{
 			document.getElementById("body").innerHTML = LoadPageAjax("mainpages/blog.html", true);
+			LoadPages();
 		}
 		function LoadPages()
 		{
