--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script type="text/javascript">
 		function LoadBlog()
 		{
-			document.getElementById("body").innerHTML = LoadPageAjax("mainpages/blog.html", true);
+			document.getElementsByTagName("body")[0].innerHTML = LoadPageAjax("mainpages/blog.html", true);
 			LoadPages();
 		}
 		function LoadPages()
