--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
-	<body id = "body">
+	<body>
 	</body>
 	<script type="text/javascript">
 		function LoadBlog()
 		{
-			document.getElementsByTagName("body")[0].innerHTML = LoadPageAjax("mainpages/blog.html", true);
+			document.getElementsByTagName("body")[0].innerHTML += LoadPageAjax("mainpages/blog.html", true);
 			LoadPages();
 		}
 		function LoadPages()
