--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	<script type="text/javascript">
 		function LoadBlog()
 		{
-			document.getElementsByTagName("body")[0].innerHTML += LoadPageAjax("mainpages/blog.html", false);
-			LoadPages();
+			alert(LoadPageAjax("mainpages/blog.html", false));
+			// document.getElementsByTagName("body")[0].innerHTML += LoadPageAjax("mainpages/blog.html", false);
+			// LoadPages();
 		}
 		function LoadPages()
 		{
