--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script type="text/javascript">
 		function LoadBlog()
 		{
-			alert(LoadPageAjax("mainpages/blog.html", false));
+			alert(LoadPageAjax("./mainpages/blog.html", false));
 			// document.getElementsByTagName("body")[0].innerHTML += LoadPageAjax("mainpages/blog.html", false);
 			// LoadPages();
 		}
