--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			for (pageIndex in pages)
 			{
 				var page = ("blog/" + pages[pageIndex][0]);
-				LoadPageAjax(page, false);
+				LoadPageAjax("pagesDiv", page, false);
 			}
 			var pageClasses = document.getElementsByClassName("blogPost");
 			for (pageIndex in pageClasses)
@@ -27,7 +27,7 @@
 				page.style.backgroundSize = "cover";
 			}
 		}
-		function LoadPageAjax(pageName, isAsync)
+		function LoadPageAjax(divId, pageName, isAsync)
 		{
 			var xmlHttp = new XMLHttpRequest();
 			xmlHttp.onreadystatechange = function()
