--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script type="text/javascript">
 		function LoadBlog()
 		{
-			LoadPageAjax("mainpages/blog.html", false);
+			LoadPageAjax("htmlbody", "mainpages/blog.html", false);
 			LoadPages();
 		}
 		function LoadPages()
