--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			{
 				var page = pageClasses[pageIndex];
 				var image = pages[pageIndex][1];
-				page.style.background = "url(" + image + ") no-repeat";
+				// page.style.background = "url(" + image + ") no-repeat";
 				page.style.backgroundSize = "cover";
 			}
 		}
